Se termino la clase generarFacturas queda por revisar (Obtener el valor todal de dicha factura)