@@ -1,6 +1,7 @@
 package Model.utils;
 
 import Model.enums.Genero;
+import Model.enums.Paises;
 import Model.enums.TipoProducto;
 import Model.objetos.Cliente;
 import Model.objetos.Factura;
@@ -11,57 +12,46 @@ import java.util.*;
 public class GeneradorFacturas {
 
     private static final Random random = new Random();
-    private static final String[] nombres = {"Juan", "María", "Carlos", "Ana", "Luis", "Laura", "Pedro", "Sofía", "Diego", "Elena", "Branon"};
-    private static final String[] alimentos = {
-            "Leche", "Pan", "Huevos", "Arroz", "Frijoles", "Manzanas", "Pasta", "Carne", "Pollo", "Cereal"
-    };
 
-    private static final String[] electrodomesticos = {
-            "Lavadora", "Refrigerador", "Televisor", "Licuadora", "Microondas", "Horno", "Aspiradora", "Batidora", "Secadora", "Cafetera"
-    };
+    // Arreglos de nombres para hombres y mujeres
+    private static final String[] hombres = {"Juan", "Carlos", "Luis", "Pedro", "Diego", "Manuel", "Javier", "Miguel", "José", "Antonio"};
+    private static final String[] mujeres = {"María", "Ana", "Laura", "Sofía", "Elena", "Isabel", "Carmen", "Paula", "Lucía", "Marta"};
 
-    private static final String[] cosmeticos = {
-            "Crema facial", "Shampoo", "Acondicionador", "Maquillaje", "Perfume", "Desodorante", "Gel de ducha", "Cepillo de dientes", "Cremas corporales", "Protector solar"
-    };
+    // Arreglos de nombres de productos por tipo
+    private static final String[] alimentos = {"Leche", "Pan", "Huevos", "Arroz", "Frijoles", "Manzanas", "Pasta", "Carne", "Pollo", "Cereal"};
+    private static final String[] electrodomesticos = {"Lavadora", "Refrigerador", "Televisor", "Licuadora", "Microondas", "Horno", "Aspiradora", "Batidora", "Secadora", "Cafetera"};
+    private static final String[] cosmeticos = {"Crema facial", "Shampoo", "Acondicionador", "Maquillaje", "Perfume", "Desodorante", "Gel de ducha", "Cepillo de dientes", "Cremas corporales", "Protector solar"};
+    private static final String[] tecnologia = {"Smartphone", "Laptop", "Tablet", "Cámara digital", "Altavoces inteligentes", "Auriculares inalámbricos", "Consola de videojuegos", "Impresora", "Router", "Smartwatch"};
 
-    private static final String[] tecnologia = {
-            "Smartphone", "Laptop", "Tablet", "Cámara digital", "Altavoces inteligentes", "Auriculares inalámbricos", "Consola de videojuegos", "Impresora", "Router", "Smartwatch"
-    };
-
-
-    /**
-     * Crear metodo para generar nombres a los clientes segun el tipo de sexo.
-     *
-     */
+    // Arreglos de ciudades por país
+    private static final String[] ciudadIndia = {"Nueva Delhi", "Bombay", "Bangalore", "Calcuta", "Chennai", "Pune", "Hyderabad"};
+    private static final String[] ciudadChile = {"Santiago", "Valparaíso", "Concepción", "La Serena", "Antofagasta", "Viña del Mar", "Temuco"};
+    private static final String[] ciudadColombia = {"Bogotá", "Medellín", "Cali", "Barranquilla", "Cartagena", "Bucaramanga", "Pereira"};
+    private static final String[] ciudadAustralia = {"Sídney", "Melbourne", "Brisbane", "Perth", "Adelaida", "Gold Coast", "Canberra"};
+    private static final String[] ciudadArgentina = {"Buenos Aires", "Córdoba", "Rosario", "Mendoza", "San Miguel de Tucumán", "La Plata", "Mar del Plata"};
 
     /**
-     * Generar metodo para crar cliente aletoreo por sus atributos.
-     */
-
-
-    /**
-     * Metodo principal para generar facturas aletoreas.
-     * @return
+     * Genera las facturas con atributos aleatorios.
+     * @return lista de facturas generadas.
      */
     private static List<Factura> generarFacturas() {
         List<Factura> listaFacturas = new ArrayList<>();
-        for (int i = 0; i < 2; i++) {
-            Cliente cliente = new Cliente("12","camilo",20, Genero.HOMBRE,"peruano","lima");
-            List<Producto> productos = generarProductosAleatorios();
-            Factura factura = new Factura(generarNumeroFacturaAleatorio(),productos.getFirst().getNombre(), productos.getLast().getTipo(),1,"10","07","2024",cliente);
+        for (int i = 0; i < 4; i++) {
+            Cliente cliente = generarClientesAletoreos().getFirst(); // Obtener un cliente aleatorio
+            List<Producto> productos = generarProductosAleatorios(); // Generar productos aleatorios
+            Factura factura = new Factura(generarIdFactura(), productos.get(0).getNombre(), productos.get(productos.size() - 1).getTipo(), 1, generarDiaAleatorioString(), generarMesAleatorioString(), generarAnioAleatorioString(), cliente);
             listaFacturas.add(factura);
         }
         return listaFacturas;
     }
 
-
     /**
-     * Metodo que me genera producto segun el tipoDe producto con su nombre
-     * @return
+     * Genera una lista de productos aleatorios.
+     * @return lista de productos generados.
      */
     private static List<Producto> generarProductosAleatorios() {
         ArrayList<Producto> productos = new ArrayList<>();
-        int numProductos = random.nextInt(1) + 1; // Entre 1 y 5 productos
+        int numProductos = random.nextInt(1) + 1; // Entre 1 y 2 productos
         for (int i = 0; i < numProductos; i++) {
             TipoProducto tipo = TipoProducto.values()[random.nextInt(TipoProducto.values().length)];
             String nombre = generarNombreAleatorio(tipo); // Genera el nombre basado en el tipo de producto
@@ -71,17 +61,104 @@ public class GeneradorFacturas {
     }
 
     /**
-     * Genera el ID factura.
-     * @return
+     * Genera un cliente aleatorio con sus atributos.
+     * @return lista de clientes generados.
      */
-    private static String generarNumeroFacturaAleatorio() {
-        return String.valueOf(random.nextInt(9000) + 1000);
+    private static List<Cliente> generarClientesAletoreos() {
+        ArrayList<Cliente> clientes = new ArrayList<>();
+        for (int i = 0; i < 1; i++) {
+            String ID = generarIdCliente();
+            int edad = generarEdadAleatoria();
+            Genero genero = Genero.values()[random.nextInt(Genero.values().length)];
+            String nombre = generarNombresGenero(genero);
+            Paises pais = Paises.values()[random.nextInt(Paises.values().length)];
+            String ciudad = generarCiudadesPaises(pais);
+            clientes.add(new Cliente(ID, nombre, edad, genero, pais, ciudad));
+        }
+        return clientes;
     }
 
     /**
-     * Genera el nombre del producto segun el tipo de producto.
-     * @param tipo
-     * @return
+     * Genera una edad aleatoria dentro de un rango.
+     * @return edad aleatoria generada.
+     */
+    private static int generarEdadAleatoria() {
+        return random.nextInt(73) + 18; // Rango de 18 a 90 (90 - 18 + 1)
+    }
+
+    /**
+     * Genera un ID de factura aleatorio.
+     * @return ID de factura aleatorio generado.
+     */
+    private static String generarIdFactura() {
+        int numeroFactura = random.nextInt(90000) + 10000; // Genera un número aleatorio de 5 dígitos
+        return String.valueOf(numeroFactura);
+    }
+
+    /**
+     * Genera un ID de cliente aleatorio.
+     * @return ID de cliente aleatorio generado.
+     */
+    private static String generarIdCliente() {
+        int numeroCliente = random.nextInt(900000000) + 100000000; // Genera un número aleatorio de 10 dígitos
+        return String.valueOf(numeroCliente);
+    }
+
+    /**
+     * Genera un día aleatorio como cadena de texto.
+     * @return día aleatorio generado como cadena de texto.
+     */
+    private static String generarDiaAleatorioString() {
+        int dia = random.nextInt(31) + 1; // Genera un número aleatorio entre 1 y 31
+        return String.format("%02d", dia); // Formatea el día como una cadena de dos dígitos
+    }
+
+    /**
+     * Genera un mes aleatorio como cadena de texto.
+     * @return mes aleatorio generado como cadena de texto.
+     */
+    private static String generarMesAleatorioString() {
+        int mes = random.nextInt(12) + 1; // Genera un número aleatorio entre 1 y 12
+        return String.format("%02d", mes); // Formatea el mes como una cadena de dos dígitos
+    }
+
+    /**
+     * Genera un año aleatorio como cadena de texto.
+     * @return año aleatorio generado como cadena de texto.
+     */
+    private static String generarAnioAleatorioString() {
+        int anio = random.nextInt(5) + 2020; // Genera un número aleatorio entre 2020 y 2024
+        return String.valueOf(anio); // Convierte el año a una cadena de texto
+    }
+
+    /**
+     * Genera un nombre aleatorio según el género especificado.
+     * @param genero género para el cual se genera el nombre.
+     * @return nombre aleatorio generado.
+     */
+    public static String generarNombresGenero(Genero genero) {
+        String[] nombres;
+        switch (genero) {
+            case MUJER:
+                nombres = mujeres;
+                break;
+            case HOMBRE:
+                nombres = hombres;
+                break;
+            case OTRO:
+                nombres = Arrays.copyOf(hombres, hombres.length + mujeres.length);
+                System.arraycopy(mujeres, 0, nombres, hombres.length, mujeres.length);
+                break;
+            default:
+                nombres = new String[]{};
+        }
+        return nombres[random.nextInt(nombres.length)];
+    }
+
+    /**
+     * Genera un nombre aleatorio para un tipo de producto específico.
+     * @param tipo tipo de producto para el cual se genera el nombre.
+     * @return nombre aleatorio generado.
      */
     private static String generarNombreAleatorio(TipoProducto tipo) {
         String[] nombres;
@@ -105,6 +182,39 @@ public class GeneradorFacturas {
         return nombres[random.nextInt(nombres.length)];
     }
 
+    /**
+     * Genera una ciudad aleatoria según el país especificado.
+     * @param pais país para el cual se genera la ciudad.
+     * @return ciudad aleatoria generada.
+     */
+    public static String generarCiudadesPaises(Paises pais) {
+        String[] ciudades;
+        switch (pais) {
+            case INDIA:
+                ciudades = ciudadIndia;
+                break;
+            case CHILE:
+                ciudades = ciudadChile;
+                break;
+            case COLOMBIA:
+                ciudades = ciudadColombia;
+                break;
+            case AUSTRALIA:
+                ciudades = ciudadAustralia;
+                break;
+            case ARGENTINA:
+                ciudades = ciudadArgentina;
+                break;
+            default:
+                ciudades = new String[]{};
+        }
+        return ciudades[random.nextInt(ciudades.length)];
+    }
+
+    /**
+     * Imprime las facturas en la consola.
+     * @param listaFacturas lista de facturas a imprimir.
+     */
     private static void imprimirFacturas(List<Factura> listaFacturas) {
         for (int i = 0; i < listaFacturas.size(); i++) {
             System.out.println("Factura " + (i + 1) + ": " + listaFacturas.get(i));
@@ -115,5 +225,4 @@ public class GeneradorFacturas {
         List<Factura> listaFacturas = generarFacturas();
         imprimirFacturas(listaFacturas);
     }
-
 }
